[metadata]
name = ipgeo-namdevel
version = 0.0.1
author = namdevel
author_email = namdevel@gmail.com
description = Free IP Geolocation API and IP Location Lookup
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/namdevel/ipgeo
project_urls =
    Bug Tracker = https://github.com/namdevel/ipgeo/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9

[options.packages.find]
where = src